@@ -1,3 +1,7 @@
+1999-12-24  Per Bothner  <per@bothner.com>
+
+	* Environment.java (put):  If was unbound, returns old value as null.
+
 1999-12-05  Per Bothner  <per@bothner.com>
 
 	* OutPort.java (class BufferedPort):  Now extends Writer instead of
